footer h2 style moved into _headingLevel2.scss/nav.scss fix transition causing horizontal overflow on window resize

--- a/src/style/components/_footer.scss
+++ b/src/style/components/_footer.scss
@@ -8,14 +8,6 @@ footer {
         margin: auto;
     }
 
-    .h2-svg-container {
-        h2 {
-            color: #fff;
-            text-align: start;
-            max-width: 772px;
-        }
-    }
-
     .heading-logo-wrapper {
         display: flex;
         align-items: flex-start;
@@ -94,16 +86,6 @@ footer {
         p {
             color: $yellow;
             letter-spacing: .08rem;
-        }
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    footer {
-        .h2-svg-container {
-            h2 {
-                font-size: 3.5rem;
-            }
         }
     }
 }
